# amq

./: A.cpp  A.h  B.cpp  B.h  CMakeLists.txt  README.md  main.cpp
include/: ABase.h  AHandler.h  ALooper.h  ALooperRoster.h  AMessage.h
source/: AHandler.cpp  ALooper.cpp  ALooperRoster.cpp  AMessage.cpp
